duck/test/fail/if-left.duck
import base

-- Verify that we can feed a Void expression through the left side
-- of an if without producing a Void type.

loop x = loop x

_ = 1 + \if False then loop () else ()
